HOMS-123 fix vertical-align, fix checkbox in auth-form (#31)

--- a/hbw/app/assets/stylesheets/hbw.sass
+++ b/hbw/app/assets/stylesheets/hbw.sass
@@ -37,7 +37,6 @@
   .form-group
     display: table
     width: 100%
-    height: 5.5em
 
   .hbw-checkbox-label
     display: table-cell
